style.css
#container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 16px;
    border: 2px solid red;
}

.scoreboard {
    display: flex;
    align-items: center;
    justify-content: center;
    border: 2px solid black;
    font-size: 28px;
    font-weight: 700;
}

.playerside,.computerside {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 3em;
    border: 2px solid black;
}
.playerside {
    background-color: darkslategray;
}

.computerside {
    background-color: crimson;
}

.instructions {
color: darkblue;
font-size: 24px;
}

#buttons {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 8px;
}
.button {
    border-radius: 15px;
    padding: 8px;
    background-color:seashell;
}

.images {
    display: flex;
    align-items: center;
    justify-content: center;
}

img {
    width: 100px;
}

.results {
    
}

